# kakeibo

./: .gitignore  CMakeLists.txt  Makefile  README.md  classify  classify.py  extractor.cc  geometry.cc  kakeibo  kakeibo.cc  kakeibo.h  perceptron.txt  receipt-extractor.cc  scanner.cc  train
kakeibo/: __init__.py  api.py  book.py  classifier.py  letters.model  receipt.py  stores.py
src/: classifier.cc  config.h.in  cutter.cc  detector.cc  extractor.cc  geometry.cc  kakeibo.cc  kakeibo.h  receipt-scanner.cc  scanner.cc
static/: index.html  manifest.json  style.css  ui.js  welcome.html
t/: check.t
